<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentku"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".FirstFragment">

    <TextView
        style="@style/TextAppearance.MaterialComponents.Headline4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/h3_md"
        android:textAlignment="center" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.google.android.material.slider.Slider
            android:id="@+id/slider_move"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="false"
            android:value="100"
            android:valueFrom="0.0"
            android:valueTo="100.0"
            app:thumbRadius="0dp"
            app:trackColorActive="@color/red"
            app:trackHeight="20dp" />

        <TextView
            android:id="@+id/txt_Name"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/h6_nama"
            android:textAlignment="center" />

    </FrameLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/snack_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:hint="@string/hint_snack"
        app:startIconDrawable="@drawable/ic_baseline_fastfood_24">

        <AutoCompleteTextView
            android:id="@+id/snack_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/back_btn"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:layout_marginEnd="36dp"
            android:text="@string/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/done_btn"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/done_btn"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:width="10dp"
            android:text="@string/done"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/back_btn"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>